force-app/main/default/objects/cgcloud__BO_API_Workflow_Entity__c/cgcloud__BO_API_Workflow_Entity__c.object-meta.xml
<CustomObject>
    <description>This object holds the entities used by Business Object API Workflows.</description>
    <label>Business Object API Workflow Entity</label>
    <nameField>
        <displayFormat>WE-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Object API Workflow Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>