force-app/main/default/objects/cgcloud__BO_API_Workflow_Entity__c/fields/cgcloud__BO_API_Entity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API_Entity__c</fullName>
    <description>Reference to the business object API entity.</description>
    <label>Business Object API Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Business Object API Entity must be &quot;Input&quot; Location</errorMessage>
        <filterItems>
            <field>cgcloud__BO_API_Entity__c.cgcloud__Location__c</field>
            <operation>equals</operation>
            <value>Input</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__BO_API_Entity__c</referenceTo>
    <relationshipLabel>Workflow Entities (Input)</relationshipLabel>
    <relationshipName>BO_API_Workflow_Input_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>