force-app/main/default/objects/cgcloud__BO_API_Workflow_Entity__c/fields/cgcloud__BO_API_Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API_Workflow__c</fullName>
    <description>Reference to the business object API workflow.</description>
    <label>Business Object API Workflow</label>
    <referenceTo>cgcloud__BO_API_Workflow__c</referenceTo>
    <relationshipLabel>Input Entities and Mapping</relationshipLabel>
    <relationshipName>BO_API_Workflow_Entities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>