force-app/main/default/objects/cgcloud__BO_API_Workflow_Entity__c/fields/cgcloud__Output_Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Output_Mapping_Field__c</fullName>
    <description>Defines the output mapping field. It must be set if Output Entity is set.</description>
    <label>Output Mapping Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>